syntax = "proto3";


option go_package = "foo";

enum EnumAllowingAlias {
  UNKNOWN = 0;
  STARTED = 1;
  RUNNING = 2;
}

message Outer {
  message Inner {   // Level 2
    int64 ival = 1;
  }
  Inner m = 1;
  repeated Inner inner_message = 2;
  EnumAllowingAlias enum_field =3;
  map<int32, string> my_map = 4;
}